# rusty-salary

./: Cargo.toml  README.md
src/: main.rs
