[package]
name = "rusty-salary"
version = "0.1.0"
authors = ["Ryan Chen <ryanjchen2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
rusqlite = "0.21.0"
serde = "1.0"
serde_json = "1.0"
